force-app/main/default/objects/Asset/fields/DU_Transmission__c.field-meta.xml
<CustomField>
    <fullName>DU_Transmission__c</fullName>
    <description>CDM: Transmission (e.g. 7-speed S tronic)</description>
    <inlineHelpText>(e.g. 7-speed S tronic)</inlineHelpText>
    <label>Transmission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>