force-app/main/default/objects/Asset/fields/DU_TruckRegistration__c.field-meta.xml
<CustomField>
    <fullName>DU_TruckRegistration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Availability of a registration as a truck</description>
    <label>Truck Registration</label>
    <type>Checkbox</type>
</CustomField>