force-app/main/default/objects/Asset/fields/DU_URLImage__c.field-meta.xml
<CustomField>
    <fullName>DU_URLImage__c</fullName>
    <description>CDM: The field to enable the image display.</description>
    <label>URL Image</label>
    <type>Url</type>
</CustomField>