force-app/main/default/objects/Asset/fields/DU_VehiclePowerInHP__c.field-meta.xml
<CustomField>
    <fullName>DU_VehiclePowerInHP__c</fullName>
    <description>CDM: Stores the vehicle power in HP.</description>
    <label>Vehicle Power in HP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>