force-app/main/default/objects/Asset/fields/DU_VehicleType__c.field-meta.xml
<CustomField>
    <fullName>DU_VehicleType__c</fullName>
    <description>CDM: Stores the type of vehicle.</description>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_VehicleType</valueSetName>
    </valueSet>
</CustomField>