force-app/main/default/objects/Asset/fields/DU_Version__c.field-meta.xml
<CustomField>
    <fullName>DU_Version__c</fullName>
    <description>CDM: Field to store data for webCalc Version</description>
    <label>Version</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>