force-app/main/default/objects/Asset/fields/DU_VIN__c.field-meta.xml
<CustomField>
    <fullName>DU_VIN__c</fullName>
    <description>CDM: Contains the vehicle identification number (VIN)</description>
    <externalId>true</externalId>
    <label>VIN</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>