force-app/main/default/objects/Asset/fields/DU_VWFSVehicleBrand__c.field-meta.xml
<CustomField>
    <fullName>DU_VWFSVehicleBrand__c</fullName>
    <description>CDM: Stores the vehicle brand.</description>
    <label>VWFS Vehicle Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>VW Commercial Vehicles</fullName>
            </value>
            <value>
                <fullName>SEAT</fullName>
            </value>
            <value>
                <fullName>SKODA</fullName>
            </value>
            <value>
                <fullName>Other Group Vehicles</fullName>
            </value>
            <value>
                <fullName>Foreign Vehicles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>